crates/plotnik-tests/tests/04-emit/types/recursion/error_repetition_capture_in_recursive_cycle.txt
A = {
  (expression_statement)
  (statement_block
    (B)* @xs
  )? @blk
}

B = {
  (debugger_statement)
  (statement_block (A))?
}
------------------ DIAGNOSTICS -------------------
error: `@xs` cannot collect `(B)*` because one repetition does not produce one node or value
  --> query.ptk:4:5
   |
 4 |       (B)* @xs
   |       ^^^^
...
 8 | / B = {
 9 | |   (debugger_statement)
10 | |   (statement_block (A))?
11 | | }
   | |_- `B` is defined here
   |
help: make each repetition produce a record by changing `(debugger_statement)` to `(debugger_statement) @xs_item` in definition `B`
